# neon-jsonwebtoken

./: .npmignore  Cargo.toml  README.md  index.d.ts  package-lock.json  package.json
src/: decode.rs  lib.rs  sign.rs  utils.rs  verify.rs
src/jsonwebtoken_mod/: algorithm.rs  header.rs  mod.rs
src/neon_serde/: de.rs  mod.rs  ser.rs
