[package]
name = "jsonwebtoken-neon"
version = "0.1.0"
authors = ["yoonhoGo <lylisha@gmail.com>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
