[package]
name = "neon-jsonwebtoken"
version = "0.1.0"
authors = ["yoonhoGo <lylisha@gmail.com>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
error-chain = "0.12.4"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]

[dependencies.num]
version = "0.4.0"
default-features = false
